# rednote-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.example.yaml
skills/ai-news-digest/: SKILL.md
skills/paper-explain/: SKILL.md
skills/tool-review/: SKILL.md
src/rednote_ai/: __init__.py  cli.py  config.py  core.py
src/rednote_ai/analyze/: __init__.py  trending.py
src/rednote_ai/generate/: __init__.py  image.py  writer.py
src/rednote_ai/llm/: __init__.py  anthropic.py  base.py  factory.py  openai.py
src/rednote_ai/publish/: __init__.py  image.py  xiaohongshu.py
src/rednote_ai/sources/: __init__.py  arxiv.py  base.py  github.py  rss.py  twitter.py
src/rednote_ai/web/: __init__.py  app.py
src/rednote_ai/web/templates/: base.html  draft_detail.html  drafts.html  fetch.html  index.html  publish.html  settings.html
