[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rednote-ai"
version = "0.1.0"
description = "AI-powered Xiaohongshu content automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "king-joker-z" }
]
keywords = ["xiaohongshu", "ai", "automation", "content"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.9",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
]
all = ["rednote-ai[dev,web]"]

[project.scripts]
rednote-ai = "rednote_ai.cli:app"

[project.urls]
Homepage = "https://github.com/king-joker-z/rednote-ai"
Repository = "https://github.com/king-joker-z/rednote-ai"

[tool.hatch.build.targets.wheel]
packages = ["src/rednote_ai"]

[tool.ruff]
line-length = 100
target-version = "py310"
